# teamcity-agent-tools

./: README.md  build.py  pyproject.toml  teamcity-plugin.xml
src/: __main__.py  main.py  query.py
