[tool.poetry]
name = "teamcitytools"
version = "0.1.0"
description = ""
authors = ["Kasper Fromm Pedersen <kasperf@cs.aau.dk>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
tomli = "2.0.*"
typer = { extras = ["all"], version = "0.7.*"}
xmltodict = "0.13.*"

[tool.poetry.scripts]
tctool = "src.main:app"

[tool.poetry.group.dev.dependencies]
black = ">=23.1.0"
pyinstaller = "5.8.*"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
